--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test:watch": "jest --watch",
     "example": "ts-node tutorials/storage-demo.ts",
     "tutorial:research-agent": "ts-node tutorials/v2.0-research-agent.ts",
+    "tutorial:youtube-agent": "ts-node tutorials/youtube-research-agent/youtube-research-agent.ts",
     "demo:observable-agent": "ts-node tutorials/v2.0-observable-agent.ts"
   },
   "keywords": [
